--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>We are all Gislen Family temporarily for 6 months</p>
+    <p>We are in office</p>
+    <p>in chennai</p>
 </body>
 </html>
