--- a/dev/index.html
+++ b/dev/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Good afternoon</h1>
-    <p>Today we are going to see about the GIT.</p>
+    <p>Today we are going to see about the GIT and Github.</p>
+    <h2>Heading 1</h2>
 </body>
 </html>
