--- a/dev/index.html
+++ b/dev/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Good afternoon</h1>
-    <p>Today we are going to see about the merge conflict.</p>
+    <p>Today we are going to see about the merge conflict and issue.</p>
 </body>
 </html>
