--- a/dev/index.html
+++ b/dev/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Good afternoon</h1>
     <p>Today we are going to see about the merge conflict and issue.</p>
+    <h2>Conflict Check</h2>
+    <p>This may conflict for others who directly push the changes without the pull operation.</p>
 </body>
 </html>
