conflict may occur

--- a/dev/index.html
+++ b/dev/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Good afternoon</h1>
     <p>Today we are going to see about the merge conflict and issue.</p>
+    <h2>without pull i push my code</h2>
 </body>
 </html>
