--- a/dev/git1.html
+++ b/dev/git1.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h4>this is the first file which is gonna edit by durai</h4>
+    <p>Durai - I added this paragraph.</p>
 </body>
 </html>
