--- a/dev/git2.html
+++ b/dev/git2.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h3>more than one file this is the second file</h3>
+    <p>Durai - I added this paragraph.</p>
 </body>
 </html>
