Commit by durai 14:19pm

--- a/dev/git1.html
+++ b/dev/git1.html
@@ -8,5 +8,7 @@
 <body>
     <h4>this is the first file which is gonna edit by durai</h4>
     <p>Durai - I added this paragraph.</p>
+    <h1>Hi peoples</h1>
+    <p>This is the example paragraph for conflict - 1:30pm</p>
 </body>
 </html>
