--- a/dev/git2.html
+++ b/dev/git2.html
@@ -8,5 +8,7 @@
 <body>
     <h3>more than one file this is the second file</h3>
     <p>Durai - I added this paragraph.</p>
+    <h1>Hi peoples</h1>
+    <p>This is the example paragraph for conflict - 1:30pm</p>
 </body>
 </html>
