conflict may arise

--- a/dev/git1.html
+++ b/dev/git1.html
@@ -8,5 +8,6 @@
 <body>
     <h4>this is the first file which is gonna edit by durai</h4>
     <p>Boobathi - i added this paragraph</p>
+    <h4>conflict may oocur</h4>
 </body>
 </html>
