--- a/dev/git2.html
+++ b/dev/git2.html
@@ -8,5 +8,6 @@
 <body>
     <h3>more than one file this is the second file</h3>
     <p>Durai - I added this paragraph.</p>
+    <h4>conflict may occur</h4>
 </body>
 </html>
